feat: openapi docs + delete all items when list get deleted
