# openapi/internal-openapi-documentation.yaml
@@ -194,6 +194,213 @@ paths:
       responses:
         '200':
           description: User data deleted completely
+  /lists:
+    get:
+      responses:
+        '200':
+          description: Array with all the lists of the logged in user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/List"
+    post:
+      requestBody:
+        $ref: "#/components/requestBodies/ListCreateBody"
+      responses:
+        '200':
+          description: Creates a new List
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/List"
+        '400':
+          description: Invalid request body (see response message)
+  /lists/{list_id}:
+    parameters:
+      - name: list_id
+        in: path
+        description: The id of the List
+        required: true
+        schema:
+          type: string
+    get:
+      responses:
+        '200':
+          description: A single List
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/List"
+        '404':
+          description: List with id list_id not found
+    put:
+      requestBody:
+        $ref: "#/components/requestBodies/ListUpdateBody"
+      responses:
+        '200':
+          description: Updated list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/List"
+        '400':
+          description: Invalid request body (see response message)
+        '404':
+          description: List with id list_id not found
+    delete:
+      responses:
+        '200':
+          description: List deleted and all items of the list deleted
+  /lists/{list_id}/categories:
+    parameters:
+      - name: list_id
+        in: path
+        description: The id of the List
+        required: true
+        schema:
+          type: string
+    get:
+      responses:
+        '200':
+          description: Array with all the categories of a List
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Category"
+        '404':
+          description: List not found
+    post:
+      requestBody:
+        $ref: "#/components/requestBodies/CategoryCreateBody"
+      responses:
+        '200':
+          description: Creates a new Category for a List
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        '400':
+          description: Invalid request body (see response message)
+        '404':
+          description: List not found
+  /lists/{list_id}/categories/{category_id}:
+    parameters:
+      - name: list_id
+        in: path
+        description: The id of the List
+        required: true
+        schema:
+          type: string
+      - name: category_id
+        in: path
+        description: The id of the Category
+        required: true
+        schema:
+          type: string
+    get:
+      responses:
+        '200':
+          description: The Category of the List
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        '404':
+          description: List not found
+    put:
+      requestBody:
+        $ref: "#/components/requestBodies/CategoryUpdateBody"
+      responses:
+        '200':
+          description: Category updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        '400':
+          description: Invalid request body (see response message)
+        '404':
+          description: List not found
+    delete:
+      responses:
+        '200':
+          description: Category deleted and items of that category deleted
+  /lists/{list_id}/items:
+    parameters:
+      - name: list_id
+        in: path
+        description: The id of the List
+        required: true
+        schema:
+          type: string
+    get:
+      responses:
+        '200':
+          description: All the Items of a List
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Item"
+    post:
+      requestBody:
+        $ref: "#/components/requestBodies/ItemCreateBody"
+      responses:
+        '200':
+          description: New Item created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Item"
+        '400':
+          description: Invalid request body (see response message)
+  /lists/{list_id}/items/{item_id}:
+    parameters:
+      - name: list_id
+        in: path
+        description: The id of the Iist
+        required: true
+        schema:
+          type: string
+      - name: item_id
+        in: path
+        description: The id of the Item
+        required: true
+        schema:
+          type: string
+    get:
+      responses:
+        '200':
+          description: Get an Item of a List
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Item"
+        '404':
+          description: List not found
+    put:
+      requestBody:
+        $ref: "#/components/requestBodies/ItemUpdateBody"
+      responses:
+        '200':
+          description: Item updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Item"
+        '400':
+          description: Invalid request body (see response message)
+        '404':
+          description: List not found
+    delete:
+      responses:
+        '200':
+          description: Item deleted
 components:
   schemas:
     Credentials:
@@ -221,6 +428,47 @@ components:
             - APPLE
             - FACEBOOK
             - NONE
+    List:
+      type: object
+      properties:
+        _id:
+          type: string
+        user_id:
+          type: string
+        name:
+          type: string
+        categories:
+          type: array
+          items:
+            $ref: "#/components/schemas/Category"
+        icon:
+          type: string
+        color:
+          type: string
+          format: 0xAARRGGBB
+    Category:
+      type: object
+      properties:
+        _id:
+          type: string
+        name:
+          type: string
+        color:
+          type: string
+          format: 0xAARRGGBB
+    Item:
+      type: object
+      properties:
+        _id:
+          type: string
+        user_id:
+          type: string
+        list_id:
+          type: string
+        category_id:
+          type: string
+        name:
+          type: string
   securitySchemes:
     sessionCookie:
       type: apiKey
@@ -229,7 +477,7 @@ components:
   requestBodies:
     EmailVerificationAuth:
       required: true
-      description: >-
+      description: >
         authentication needed for the routes related to email verification
       content:
         application/x-www-form-urlencoded:
@@ -245,5 +493,98 @@ components:
             required:
               - email
               - password
+    ListCreateBody:
+      required: true
+      description: >
+        Creates a new list with the passed properties
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                required: true
+                type: string
+              icon:
+                required: true
+                type: string
+              color:
+                required: true
+                type: string
+                format: 0xAARRGGBB
+    ListUpdateBody:
+      required: true
+      description: >
+        Non null values of this object will update the respective property of a list (null values are ignored)
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              icon:
+                type: string
+              color:
+                type: string
+                format: 0xAARRGGBB
+    ItemCreateBody:
+      required: true
+      description: >
+        Creates a new item with the passed properties
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                required: true
+                type: string
+              category_id:
+                required: true
+                type: string
+    ItemUpdateBody:
+      required: true
+      description: >
+        Non null values of this object will update the respective property of an item (null values are ignored)
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              category_id:
+                type: string
+    CategoryCreateBody:
+      required: true
+      description: >
+        Creates a new category with the passed properties
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                required: true
+                type: string
+              color:
+                required: true
+                type: string
+                format: 0xAARRGGBB
+    CategoryUpdateBody:
+      required: true
+      description: >
+        Non null values of this object will update the respective property of a category (null values are ignored)
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              color:
+                type: string
+                format: 0xAARRGGBB
 security:
   - sessionCookie: []
